@startuml

scale 600 width

package models{
    class Bus{
        -Collection<Client> client
        -String busID
        -Integer capacity
        -Double speed
        -String type
        -Location location
        -String "state"
        -Collection<Integer> stops
        -Double Distance
        -Status status
        +Integer getCapacity()
        +Integer getSpeed()
        +String getType()
        +Collection<Client> getClient()
        +Void addClients()
        +Void removeClients()
        +Status getStatus()
    }

    class Client{
        -String destination
        -Boolean isOnBus
        -Boolean arrived
        +String getDestination()
        +Boolean getIsOnBus()
        +Boolean getArrived()
    }

    class Location{
        -String name
        -Location nextStop
        -Location previousStop
        -Collection<Client> client
        +String getName()
        +Location getNext()
        +Location getPrevious()
        +Collection<Client> getClient()
    }

    class Supervisor{
        -Integer id
        +Integer getId()
    }

    class Status{
        -String status
        -Boolean stopped
        +String getStatus()
        +Boolean getStopped()
    }

    class AnomalyMaker{
        -String types
        +String getTypes()
    }

    Bus --o Client
    Location --o Client
    Status *-- Bus
    AnomalyMaker -- Bus
    Supervisor -- Bus
    controller *-- Bus
    controller *-- AnomalyMaker
    controller *-- Location
    controller -- view


}

package view {

    class Cli{
        -String input
    }

}

package controller {
    class controller{
        -Collection<Bus> bus
        -Collection<Location> location
        -Collection<AnomalyMaker> anomalyMaker
        +Collection<Bus> getBus()
        +Collection<Location> getLocation()
        +Collection<AnomalyMaker> getAnomalyMaker()
        +void addBus()
        +void runBusses()

    }
}

@enduml

Bookmark <-[#000000]- BookmarkType
    Session ..|> iSession
    CreateInfo ..|> iCreateInfo
    Project ..|> iProject
    User ..|> iUser
    iBookmark <|..Bookmark
    Directory ..|> iDirectory
    Bookmark -[#007700]-|> CreateInfo
    Project -[#007700]-|> CreateInfo
    User -[#000000]- CreateInfo
    Project "0.." o-[#000000]- "1" Participant
    User "1" -[#000000]- "1" Participant
    User "1.." *-[#000000]- "0.." Project
    Session -[#007700]-|> CreateInfo
    User o-[#000000]- Session
    Session <-[#000000]- Root
    User <-[#000000]- Root
    Directory *-[#000000]- Directory
    Root <-[#000000]- Directory
    Bookmark -[#000000]-* BookmarkUser
    BookmarkUser -[#000000]-* Directory
    Root -[#000000]-> Project